# py-viewport

./: .gitignore  Pipfile  README.md  TODO  pyproject.toml
examples/: 00_hello_world.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  setupProxy.ts
src/: cli.py  compile_protos.sh  server.py  viewport.py
src/frontend/: .gitignore  package-lock.json  package.json
src/frontend/src/: App.tsx  Scene.ts  primitives.ts  ws_schema.ts
src/proto/: messages.proto
src/tests/: test_viewport.py
src/viewport/: __init__.py  action.py  canvas2d.py  canvas3d.py  elements.py  scene.py  viewport.py
src/viewport/frontend/: package.json
src/viewport/frontend/src/: Scene.ts  setupProxy.ts
